[package]
name = "fastdfs-client"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["FastDFS Rust Client Contributors"]
license = "GPL-3.0"
description = "Official Rust client for FastDFS distributed file system"
homepage = "https://github.com/happyfish100/fastdfs"
repository = "https://github.com/happyfish100/fastdfs"
documentation = "https://docs.rs/fastdfs-client"
readme = "README.md"
keywords = ["fastdfs", "distributed-file-system", "storage", "client"]
categories = ["filesystem", "network-programming"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "fastdfs"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "metadata_example"
path = "examples/metadata_example.rs"

[[example]]
name = "appender_example"
path = "examples/appender_example.rs"

[[example]]
name = "slave_file_example"
path = "examples/slave_file_example.rs"

[[example]]
name = "partial_download_example"
path = "examples/partial_download_example.rs"

[[example]]
name = "connection_pool_example"
path = "examples/connection_pool_example.rs"

[[example]]
name = "concurrent_operations_example"
path = "examples/concurrent_operations_example.rs"

[[example]]
name = "batch_operations_example"
path = "examples/batch_operations_example.rs"

[[example]]
name = "error_handling_example"
path = "examples/error_handling_example.rs"

[[example]]
name = "streaming_example"
path = "examples/streaming_example.rs"

[[example]]
name = "cancellation_example"
path = "examples/cancellation_example.rs"

[[example]]
name = "configuration_example"
path = "examples/configuration_example.rs"

[[example]]
name = "file_info_example"
path = "examples/file_info_example.rs"

[[example]]
name = "advanced_metadata_example"
path = "examples/advanced_metadata_example.rs"
